--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,7 @@
         <activity android:name=".activity.game.GameSetActivity" android:screenOrientation="portrait" />
         <activity android:name=".activity.game.GameSetHighGradeActivity" android:screenOrientation="portrait" />
         <activity android:name=".activity.game.GameActivity" android:screenOrientation="portrait" ></activity>
+        <activity android:name=".activity.news.DetailNewsActivity" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
