--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,9 +39,9 @@
     <application
         android:name=".util.DzApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
 
@@ -124,7 +124,6 @@
         <activity
             android:name=".activity.WellcomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
@@ -205,6 +204,8 @@
         <activity android:name=".activity.user.GameHistoryRecordActivity" android:screenOrientation="portrait" />
         <activity android:name=".activity.user.GameDetailedHistoryActivity" android:screenOrientation="portrait" />
         <activity android:name=".activity.user.GameRecordLookBack" android:screenOrientation="portrait" />
+        <activity android:name=".activity.game.GameAddActivity" android:screenOrientation="portrait" />
+
 
 
         <!-- 掌付相关-->
