--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,7 +143,7 @@
             android:name=".activity.user.VerifyPhoneNumberActivity"
             android:label="@string/title_activity_verify_phone_number"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activity.user.RegisterActivity"
             android:screenOrientation="portrait" />
