--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     testCompile 'junit:junit:4.12'
+    compile project(path: ':BaseLib')
 }
