--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,13 @@ android {
         ]
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFile('proguard.cfg')
+        }
+        release {
+            minifyEnabled true
+            proguardFile('proguard.cfg')
         }
     }
     lintOptions {
