一些临时提交

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -34,7 +34,37 @@
 -keep public enum com.bumptech.glide.load.resource.bitmap.ImageHeaderParser$** {
     **[] $VALUES;
     public *;
- }
+}
+
+#支付宝混淆
+ -keep class com.alipay.android.app.IAlixPay{*;}
+ -keep class com.alipay.android.app.IAlixPay$Stub{*;}
+ -keep class com.alipay.android.app.IRemoteServiceCallback{*;}
+ -keep class com.alipay.android.app.IRemoteServiceCallback$Stub{*;}
+ -keep class com.alipay.sdk.app.PayTask{ public *;}
+ -keep class com.alipay.sdk.app.AuthTask{ public *;}
+
+ #pinyin4j
+ -dontwarn net.soureceforge.pinyin4j.**
+ -dontwarn demo.**
+ -keep class net.sourceforge.pinyin4j.** { *;}
+ -keep class demo.** { *;}
+
+#极光推送
+-dontoptimize
+-dontpreverify
+-dontwarn cn.jpush.**
+-keep class cn.jpush.** { *; }
+-keep class * extends cn.jpush.android.helpers.JPushMessageReceiver { *; }
+-dontwarn cn.jiguang.**
+-keep class cn.jiguang.** { *; }
+-dontwarn com.google.**
+-keep class com.google.gson.** {*;}
+-keep class com.google.protobuf.** {*;}
+
+#emoji
+-keep class com.xhsemoticonskeyboard.common.adapter.emoticonadapter.** { *; }
+-dontwarn com.xhsemoticonskeyboard.common.adapter.emoticonadapter.**
 
 -keep public class * extends android.os.IInterface
 
