1、开发俱乐部相关的二级页面 2、开发我的页面部分二级页面 3、“我的”和“俱乐部”部分已有页面UI修正和适配

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -170,7 +170,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.club.ChatActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <!--<activity-->
             <!--android:name=".activity.club.BaseActivity"-->
             <!--android:screenOrientation="portrait" />-->
@@ -223,7 +223,8 @@
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
             android:screenOrientation="behind"/>
-        <activity android:name=".activity.base.BaseToolbarActivity" />
+        <activity android:name=".activity.club.ClubInfoDetailActivity" />
+        <activity android:name=".activity.club.GamblingListActivity" />
     </application>
 
 </manifest>
