1、修复我的页面的UI 2、俱乐部获取申请加入俱乐部的消息 3、增加俱乐部管理页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
             proguardFile('proguard.cfg')
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFile('proguard.cfg')
         }
     }
