1、release包打开混淆开关 2、解决混淆配置不对导致的编译不过的问题

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -16,6 +16,41 @@
 -dontwarn android.app.**
 -dontwarn android.os.**
 -dontwarn android.util.**
+
+
+ # 保持哪些类不被混淆：四大组件，应用类，配置类等等
+-keep public class * extends android.app.Activity
+-keep public class * extends android.app.Application
+-keep public class * extends android.app.Service
+-keep public class * extends android.content.BroadcastReceiver
+-keep public class * extends android.content.ContentProvider
+-keep public class * extends android.app.backup.BackupAgentHelper
+-keep public class * extends android.preference.Preference
+-keep public class com.android.vending.licensing.ILicensingService
+
+ # 保持 Parcelable 不被混淆
+-keep class * implements android.os.Parcelable {
+  public static final android.os.Parcelable$Creator *;
+}
+
+#保持注解
+ -keepattributes *Annotation*
+
+ #不混淆android-async-http
+ -keep class com.loopj.android.http.**{*;}
+
+ #不混淆org.apache.http.legacy.jar
+  -dontwarn android.net.compatibility.**
+  -dontwarn android.net.http.**
+  -dontwarn com.android.internal.http.multipart.**
+  -dontwarn org.apache.commons.**
+  -dontwarn org.apache.http.**
+  -keep class android.net.compatibility.**{*;}
+  -keep class android.net.http.**{*;}
+  -keep class com.android.internal.http.multipart.**{*;}
+  -keep class org.apache.commons.**{*;}
+  -keep class org.apache.http.**{*;}
+
 # Retrofit
 -dontnote retrofit2.Platform
 -dontnote retrofit2.Platform$IOS$MainThreadExecutor
@@ -169,19 +204,6 @@
 
 -keep class com.google.gson.** {*;}
 
-##---------------End: proguard configuration for Gson  ----------
-
--keep class com.mcto.player.nativemediaplayer.** { *; }
-
--keep class com.mcto.player.mctoplayer.** { *; }
-
--keep class com.mcto.player.playerutils.** { *; }
-
--keep class com.mcto.player.livecontroller.** { *; }
-
--keep interface com.mcto.player.livecontroller.** { *; }
-
--keep interface com.iqiyi.video.download.service.** { *; }
 
 -keepclassmembers class * {
     @android.webkit.JavascriptInterface <methods>;
