--- a/BaseLib/build.gradle
+++ b/BaseLib/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1picasso.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     //Image lib
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
