--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
+    useLibrary 'org.apache.http.legacy'
     aaptOptions {
         cruncherEnabled = false
         useNewCruncher = false
@@ -39,7 +40,7 @@ android {
             proguardFile('proguard.cfg')
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFile('proguard.cfg')
         }
     }
