混淆真的是各种坑，累

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -18,6 +18,38 @@
 -dontwarn android.util.**
 
 
+-dontwarn okhttp3.**
+-dontwarn javax.annotation.**
+# A resource is loaded with a relative path so the package of this class must be preserved.
+-keepnames class okhttp3.internal.publicsuffix.PublicSuffixDatabase
+
+
+-dontwarn sun.misc.**
+-keepclassmembers class rx.internal.util.unsafe.*ArrayQueue*Field* {
+ long producerIndex;
+ long consumerIndex;
+}
+-keepclassmembers class rx.internal.util.unsafe.BaseLinkedQueueProducerNodeRef {
+ rx.internal.util.atomic.LinkedQueueNode producerNode;
+}
+-keepclassmembers class rx.internal.util.unsafe.BaseLinkedQueueConsumerNodeRef {
+ rx.internal.util.atomic.LinkedQueueNode consumerNode;
+}
+
+-keep class com.yijian.dzpoker.entity.NotificationClickEventReceiver{ *; }
+
+-keepclassmembers class com.yijian.dzpoker.activity.club.ChatActivity{
+    public void onEvent(cn.jpush.im.android.api.event.MessageEvent);
+    public void onEvent(cn.jpush.im.android.api.event.MessageRetractEvent);
+    public void onEventMainThread(*);
+}
+
+-keepclassmembers class com.yijian.dzpoker.activity.club.BaseActivity{
+    public void onEvent(cn.jpush.im.android.api.event.MessageEvent);
+    public void onEvent(cn.jpush.im.android.api.event.MessageRetractEvent);
+    public void onEventMainThread(*);
+}
+
  # 保持哪些类不被混淆：四大组件，应用类，配置类等等
 -keep public class * extends android.app.Activity
 -keep public class * extends android.app.Application
@@ -50,6 +82,9 @@
   -keep class com.android.internal.http.multipart.**{*;}
   -keep class org.apache.commons.**{*;}
   -keep class org.apache.http.**{*;}
+
+  -dontwarn android.net.**
+  -keep class android.net.SSLCertificateSocketFactory{*;}
 
 # Retrofit
 -dontnote retrofit2.Platform
@@ -85,6 +120,17 @@
  -keep class net.sourceforge.pinyin4j.** { *;}
  -keep class demo.** { *;}
 
+-keepattributes *Annotation*
+-keepclassmembers class ** {
+    @org.greenrobot.eventbus.Subscribe <methods>;
+}
+-keep enum org.greenrobot.eventbus.ThreadMode { *; }
+
+# Only required if you use AsyncExecutor
+-keepclassmembers class * extends org.greenrobot.eventbus.util.ThrowableFailureEvent {
+    <init>(java.lang.Throwable);
+}
+
 #极光推送
 -dontoptimize
 -dontpreverify
@@ -93,6 +139,7 @@
 -keep class * extends cn.jpush.android.helpers.JPushMessageReceiver { *; }
 -dontwarn cn.jiguang.**
 -keep class cn.jiguang.** { *; }
+-keep class jiguang.** { *; }
 -dontwarn com.google.**
 -keep class com.google.gson.** {*;}
 -keep class com.google.protobuf.** {*;}
