--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
     <application
         android:name=".util.DzApplication"
         android:allowBackup="true"
-        android:icon="@drawable/app"
+        android:icon="@drawable/dzpoker_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/app"
         android:supportsRtl="true"
