修复release包由于剔除了eventbus回调接口引起的崩溃

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -4,7 +4,7 @@
 -dontskipnonpubliclibraryclasses
 -dontpreverify
 -verbose
-#-dontshrink
+-dontshrink
 
 -optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
 -classobfuscationdictionary windows_name.txt
